k8s/ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrkt-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules: 
    - http:
        paths:
          - path: /order(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /catlog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 80
          - path: /cart(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-svc
                port:
                  number: 80
